--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -69,7 +69,7 @@
                 <h1 class="contenido__titulo--color contenido__titulo--tipografia contenido__titulo--boxYFlex">GALERÍA DE NUESTROS TRABAJOS</h1>
             </div>
             </div>
-              <div class="col-lg-12 col-xs-12">
+              <div class="col-lg-12 col-xs-12" data-aos="fade-left">
                 <div class="row galeria__contenedor--boxYFlex">
                 <div class="card-columns">
                   <div class="card galeria__card--color">
