Modificacion en boton contacto

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -101,7 +101,7 @@
                             </label>
                             <div class="btn-group infoContacto__botones--boxYFlex" role="group" aria-label="Basic example">
                               <button type="reset" class="btn btn-secondary infoContacto__boton1--boxyFlex infoContacto__botones--color">Borrar todo</button>
-                              <button type="submit" class="btn btn-secondary infoContacto__boton2--boxyFlex infoContacto__botones--color">Enviar</button>
+                              <button type="submit" class="btn btn-secondary infoContacto__boton2--boxyFlex infoContacto__botones--color btn-danger" data-toggle="popover" title="Formulario completo" >Enviar</button>
                             </div>
                           </div>               
                   </form>
