Modifique tamaño e las card y color de progreso en artistas

--- a/paginas/artistas.html
+++ b/paginas/artistas.html
@@ -72,10 +72,10 @@
           <div class="infoArtistas__contenedor--color infoArtistas__contenedor--boxYFlex" data-aos="fade-down">
             <img src="../assets/img/fotoRamiro.jpg" class="card-img-top" alt="Foto Rami">
             <div class="card-body infoArtista__card--boxYFlex">
-              <h2 class="card-title infoArtista__titulo--color infoArtista__titulo--tipografia infoArtistas__titulo--boxYFlex">Ramiro Gonzalez</h2>
+              <h2 class="card-title infoArtista__titulo--color infoArtista__titulo--tipografia infoArtistas__cardtitulo--boxYFlex">Ramiro Gonzalez</h2>
               <h3 class="barra__titulo--tipografia">Precisión en puntillismo</h3>
                 <div class="progress barra__progreso--boxYFlex">
-                  <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 75%">75%</div>
+                  <div class="progress-bar progress-bar-striped progress-bar-animated barra_progreso--colores" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 75%">75%</div>
                 </div>
               <p class="card-text infoArtista__texto--tipografia"> Su pasión por el puntillismo lo llevó a comenzar profesionalmente en el mundo del tattoo de la mano de un compañero con el que trabajaba y le propuso aprender este oficio viendo su potencial y talento natural.
               Trabaja hace más de 6 años, fué depurando su estilo y acudió a varios cursos especificos para tatuadores profesionales donde aprendió las últimas técnicas, normas higiénicas, legislaciones, etc.</p>
@@ -86,10 +86,10 @@
           <div class="infoArtistas__contenedor--color infoArtistas__contenedor--boxYFlex"data-aos="fade-down">
             <img src="../assets/img/fotoCandela.jpg" class="card-img-top" alt="Foto Cande">
             <div class="card-body infoArtista__card--boxYFlex">
-              <h2 class="card-title infoArtista__titulo--color infoArtista__titulo--tipografia infoArtistas__titulo--boxYFlex">Candela Pérez </h2>
+              <h2 class="card-title infoArtista__titulo--color infoArtista__titulo--tipografia infoArtistas__cardtitulo--boxYFlex">Candela Pérez </h2>
               <h3 class="barra__titulo--tipografia">Estilo Old School</h3>
               <div class="progress barra__progreso--boxYFlex">
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 95%">95%</div>
+                <div class="progress-bar progress-bar-striped progress-bar-animated barra_progreso--colores" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 95%">95%</div>
               </div>
               <p class="card-text infoArtista__texto--tipografia">Lleva más de una década siendo parte del equipo, abarca tanto el estilo Blackwork como el Old School.
                 Destaca por su destreza y finura en estilos geométricos y de patrones, dotwork y blackwork, aunque si te animas a hacerte algo con color estará encantada de dar rienda suelta a las manchas del watercolor/acuarela.
@@ -103,10 +103,10 @@
           <div class="infoArtistas__contenedor--color infoArtistas__contenedor--boxYFlex" data-aos="fade-down">
             <img src="../assets/img/fotoMark.jpg" class="card-img-top" alt="Foto Mark">
             <div class="card-body infoArtista__card--boxYFlex">
-              <h2 class="card-title infoArtista__titulo--color infoArtista__titulo--tipografia infoArtistas__titulo--boxYFlex">Mark Francis</h2>
+              <h2 class="card-title infoArtista__titulo--color infoArtista__titulo--tipografia infoArtistas__cardtitulo--boxYFlex">Mark Francis</h2>
               <h3 class="barra__titulo--tipografia">Estilo realista</h3>
               <div class="progress barra__progreso--boxYFlex">
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 80%">80%</div>
+                <div class="progress-bar progress-bar-striped progress-bar-animated barra_progreso--colores" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 80%">80%</div>
               </div>
               <p class="card-text infoArtista__texto--tipografia">Destaca por su versatilidad como tatuador e ilustrador.
                 Su mano ha dado vida a varias portadas de discos míticos de rock nacional.
@@ -119,10 +119,10 @@
           <div class="infoArtistas__contenedor--color infoArtistas__contenedor--boxYFlex"data-aos="fade-down">
             <img src="../assets/img/fotoRicardo.jpg" class="card-img-top" alt="Foto Richard">
             <div class="card-body infoArtista__card--boxYFlex">
-              <h2 class="card-title infoArtista__titulo--color infoArtista__titulo--tipografia infoArtistas__titulo--boxYFlex">Richard Simons</h2>
+              <h2 class="card-title infoArtista__titulo--color infoArtista__titulo--tipografia infoArtistas__cardtitulo--boxYFlex">Richard Simons</h2>
               <h3 class="barra__titulo--tipografia">Estilo Japonés</h3>
                 <div class="progress barra__progreso--boxYFlex">
-                  <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 100%">100%</div>
+                  <div class="progress-bar progress-bar-striped progress-bar-animated barra_progreso--colores" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 100%">100%</div>
                 </div>
               <p class="card-text infoArtista__texto--tipografia">Gracias a su dedicación ha sido premiado en varias ocasiones en distintas convenciones de tatuaje.
                 Dominio de múltiples estilos como Japonés Tradicional, neo Japonés, realista, acuarela.
