Modifque cards del index

--- a/index.html
+++ b/index.html
@@ -126,6 +126,64 @@
             </section>
         </div>
     </div>
+
+    <!-- Preguntas frecuentes -->
+    <hr>
+    <div class="container-fluid">
+      <div class="row">
+          <div class="col-lg-12 col-xs-12 preguntas__contendor--boxYFlex color">
+              <h2 class="preguntas__titulo--color preguntas__titulo--tipografia">Preguntas frecuentes</h2>
+          </div>
+          <div class="col-lg-3 col-xs-12">
+            <div class="card preguntas_card--color preguntas_card--boxYFlex preguntas_card--efectos"data-aos="flip-left"
+            data-aos-easing="ease-out-cubic"
+            data-aos-duration="2000" >
+              <img src="assets/img/mirandoCelular.jpg" class="card-img-top" alt="Persona tatuada mirando celular">
+              <div class="card-body">
+                <h5 class="card-title">¿Cuanto me sale un tatuaje?</h5>
+                <p class="card-text">El precio del tatuaje varía en función del tamaño y del diseño, razón por la cual es necesario acercarse por el local y hablar con alguno de los tatuadores, para convenir acerca del trabajo a realizar y el presupuesto. No se envían presupuestos por mail, redes sociales ni por teléfono.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-xs-12">
+            <div class="card preguntas_card--color preguntas_card--boxYFlex preguntas_card--efectos" data-aos="flip-left"
+            data-aos-easing="ease-out-cubic"
+            data-aos-duration="2200" >
+              <img src="assets/img/tatuando.jpg" class="card-img-top" alt="Persona tatuando">
+              <div class="card-body">
+                <h5 class="card-title">¿Qué cuidados tengo que tener luego de hacerme un tatto?</h5>
+                <p class="card-text">Mantener el vendaje durante 4 horas
+                  Luego de las 4 horas, sacar el vendaje y lavar con agua y jabón neutro. 
+                  Colocar crema 4 veces por día.  Evitar el exceso de crema, sol, agua salada o con cloro . No mantener en agua demasiado tiempo mas que un remojo. </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-xs-12">
+            <div class="card preguntas_card--color preguntas_card--boxYFlex preguntas_card--efectos" data-aos="flip-left"
+            data-aos-easing="ease-out-cubic"
+            data-aos-duration="2400" >
+              <img src="assets/img/sombrero.jpg" class="card-img-top" alt="Persona tatuadda con sombrero">
+              <div class="card-body">
+                <h5 class="card-title">¿Tengo que pedir turno?</h5>
+                <p class="card-text">
+                  Para el caso de los tattoos, cuando se trate de diseños pequeños se realizan en el momento tambien (tratando de no venir sobre el horario de cierre del local), pero para diseños grandes es conveniente reservar un turno, para no correr el riesgo de venir hasta el local y que no haya ningun tatuador disponible. </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-xs-12">
+            <div class="card preguntas_card--color preguntas_card--boxYFlex preguntas_card--efectos" data-aos="flip-left"
+            data-aos-easing="ease-out-cubic"
+            data-aos-duration="2600" >
+              <img src="assets/img/robot.jpg" class="card-img-top" alt="Tatuao dando la mano a robot">
+              <div class="card-body">
+                <h5 class="card-title">¿Como debo hacer si soy menor de 18 años?</h5>
+                <p class="card-text">Los menores de 18 años que quieran hacerce un tattoo o piercing, deberan venir acompañados por alguno de sus padres, y todos con DNI, para firmar la autorización correspondiente. </p>
+              </div>
+            </div>
+          </div>
+         
+      </div>
+    </div>
             <!-- footer -->
     <div class="container-fluid">
         <footer class="row footer__fondo--color">
