Saqué el error de la nav

--- a/paginas/estudio.html
+++ b/paginas/estudio.html
@@ -51,9 +51,6 @@
                         <li class="nav-item">
                           <a class="nav-link nav__items--color nav__items--tipografia nav_items--boxYFlex nav__items--efecto" href="contacto.html">CONTACTO</a>
                         </li>
-                        <li class="nav-item">
-                          <a class="nav-link nav__items--color nav__items--tipografia nav_items--boxYFlex nav__items--efecto" href="404.html">ERROR</a>
-                        </li>
                       </ul>
                     </div>
                   </nav>
@@ -76,6 +73,9 @@
                 <p> Un trato familiar y muy cercano, nuestra principal intención es hacer sentir a todo el que entre como si estuviera en su casa. Siempre realizamos una visita previa con todos nuestros clientes, para poder escucharlos y entender lo que quieren llevar en su piel. <strong> Nuestros diseños son únicos y totalmente personalizados,</strong> dibujados especialmente para cada persona, entendiendo e intentando expresar lo que cada elemento significa.</p>
                 <p>Realizamos todo tipo de tatuajes adaptando cada estilo a las necesidades de cada persona, siendo nuestra pasión los mandalas, el puntillismo, los tatuajes geométricos, realistas, tatuajes ilustrados, con watercolor, tatuajes pequeños y los tatuajes de estilo tradicional.</p>
                 <p> Las mayores medidas higiénico-sanitarias, usando siempre materiales desechables y de la <strong> máxima calidad.</strong> Facilitamos a todos nuestros clientes información para antes y después de tatuarse, y resolvemos todas las dudas que se puedan tener.</p>
+                <div class="btn-group errorInformacion__contenedorBoton--boxYFlex " role="group" aria-label="Basic example">
+                  <button onclick="window.location.href='404.html'"class="errorInformacion__boton--color errorInformacion__boton--tipografia" style="margin: 20px;">Ver otro estudio</button>
+                </div>
             </div>
         </div>
     </div>
