Limpie el codigo generra

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="row">
             <section class="col-lg-12 col-xs-12 bienvenida bienvenida__contenedor--boxYFlex" data-aos="fade-up">
                 <h1 class="bienvenida__titulo--color bienvenida__titulo--tipografia bienvenida__titulo--boxYFlex">BIENVENIDOS A OLIVER TATTOO STUDIO </h1>
-                <P class="contenidoIndex bienvenida__texto--color bienvenida__texto--tipografia bienvenida__texto--boxYFlex"> El tatuaje es una expresión que en los últimos años se ha resignificado frente a diferenpúblicos como un medio para expresar ideas, sentimientos, experiencias, ideologías o deseos.
+                <P class=" bienvenida__texto--color bienvenida__texto--tipografia bienvenida__texto--boxYFlex"> El tatuaje es una expresión que en los últimos años se ha resignificado frente a diferenpúblicos como un medio para expresar ideas, sentimientos, experiencias, ideologías o deseos.
                 Por eso en <span>oliver studio</span> queremos ayudarte a elegir tu próximo tatuaje.</P>
             </section>
         </div>
@@ -120,7 +120,7 @@
         <div class="row bienvenida__musica--boxYFlex"  data-aos="fade-up">
           
             <h2 class="musica__titulo--tipografia">...Un poquito de música</h2>
-            <audio class= "colorFondo" src="assets/audio/beat.mp3" controls></audio>
+            <audio src="assets/audio/beat.mp3" controls></audio>
           
         </div>
     </div>
