--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -66,8 +66,9 @@
                 <h1 class="infoContacto__titulo--color infoContacto__titulo--tipografia" >CONTACTANOS</h1>
                 <p class="group infoContacto__texto--color infoContacto__texto--tipografia infoContacto__texto--boxYFlex">¿Tienes alguna duda? ¿Quieres que te ayudemos a plasmar en un diseño alguna idea que tenes en mente? ¿Buscas regalar algo único y para toda la vida? <br>
                   Rellena el formulario de contacto y te atenderemos lo antes posible.</p>
-            </div>          
-
+            </div>   
+            
+            <!-- Formulario -->
 
             <div class="col-lg-12 col-xs-12 infoContacto__fomrulario--color infoContacto__fomrulario--boxYFlex " data-aos="fade-right">
               <form>
