--- a/paginas/estudio.html
+++ b/paginas/estudio.html
@@ -30,7 +30,7 @@
         <div class="row">
             <div class="col-lg-12 col-xs-12">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light nav__fondo--color">
-                    <a class="navbar-brand logoGrande nav__logo--boxYFlex nav__logo--efectos" href="../index.html"><img src="../assets/svg/logo.svg" alt="Logo de la página" class="logo"></a>
+                    <a class="navbar-brand nav__logo--boxYFlex nav__logo--efectos" href="../index.html"><img src="../assets/svg/logo.svg" alt="Logo de la página" class="logo"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
