--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -29,7 +29,7 @@
         <div class="row">
             <div class="col-lg-12 col-xs-12">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light nav__fondo--color">
-                    <a class="navbar-brand logoGrande nav__logo--boxYFlex nav__logo--efectos" href="../index.html"><img src="../assets/svg/logo.svg" alt="Logo de la página" class="logo"></a>
+                    <a class="navbar-brand nav__logo--boxYFlex nav__logo--efectos" href="../index.html"><img src="../assets/svg/logo.svg" alt="Logo de la página" class="logo"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
@@ -61,9 +61,9 @@
 
     <!-- contenido -->
     <div class="container-fluid">
-        <div class="row contenido">
+        <div class="row galeria">
             <div class="col-lg-12 col-xs-12">
-                <h1 class="contenido__titulo--color contenido__titulo--tipografia contenido__titulo--boxYFlex">GALERÍA DE NUESTROS TRABAJOS</h1>
+                <h1 class="galeria__titulo--color galeria__titulo--tipografia galeria__titulo--boxYFlex">GALERÍA DE NUESTROS TRABAJOS</h1>
             </div>
             </div>
               <div class="col-lg-12 col-xs-12" data-aos="fade-left">
@@ -72,7 +72,7 @@
                   <div class="card galeria__card--color">
                     <img src="../assets/img/chicaPosando.jpg" class="card-img-top" alt="Foto Galeria">
                     <div class="card-body">
-                      <h5 class="card-title contenido_card--tipografia">Trabajo realizado por Cande</h5>
+                      <h5 class="card-title">Trabajo realizado por Cande</h5>
                       <p class="card-text">Cuanto más conocemos el método de trabajo del tatuador, más confianza y seguridad tendremos de estar en sus manos. </p>
                       <p class="card-text"><small class="text-muted">Hace 2 dias</small></p>
                     </div>
@@ -100,7 +100,7 @@
                   <div class="card galeria__card--color">
                     <img src="../assets/img/torsoTatuado.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title contenido_card--tipografia">Trabajo realizado por Mark</h5>
+                      <h5 class="card-title">Trabajo realizado por Mark</h5>
                       <p class="card-text">Un tatuador que se interesa en tu opinión, en brindarte confort para que te sientas cómodo y relajado es importante para que el resultado final sea un éxito.</p>
                       <p class="card-text"><small class="text-muted">Hace 4 meses</small></p>
                     </div>
@@ -120,7 +120,7 @@
                   </div>
                   <div class="card text-center galeria__card--color">
                     <div class="card-body">
-                      <h5 class="card-title contenido_card--tipografia">OLIVER TATTO STUDIO</h5>
+                      <h5 class="card-title">OLIVER TATTO STUDIO</h5>
                       <p class="card-text">Veni a conocernos y entenderás por qué debes elegir tatuarte en nuestro estudio</p>
                     </div>
                   </div>
@@ -143,7 +143,7 @@
                   <div class="card galeria__card--color">
                     <img src="../assets/img/tatuajeCara.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title contenido_card--tipografia">Trabajo realizado por Richard</h5>
+                      <h5 class="card-title">Trabajo realizado por Richard</h5>
                       <p class="card-text">Puedes presentar un boceto del diseño que prefieras y junto al tatuador buscar la mejor manera de resaltar para que resulte un diseño original.</p>
                       <p class="card-text"><small class="text-muted">Hace 2 meses</small></p>
                     </div>
@@ -164,7 +164,7 @@
                   <div class="card galeria__card--color">
                     <img src="../assets/img/tatuajeTibia.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title contenido_card--tipografia">Trabajo realizado por Rami</h5>
+                      <h5 class="card-title">Trabajo realizado por Rami</h5>
                       <p class="card-text">Como en cualquier rubro, esperamos ser correspondidos en la relación precio - calidad. Para mayor seguridad, pide un borrador del diseño que elegiste para que estés 100% seguro y entablar una conversación con el profesional antes de comenzar la sesión en la que te explique todos los detalles del proceso.</p>
                       <p class="card-text"><small class="text-muted">Hace 9 meses</small></p>
                     </div>
