Subi el video a galeria

--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -106,7 +106,7 @@
                     </div>
                   </div>
                   <div class="card galeria__card--color">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/9Y7VkYgDzvE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen controls class="card-img" alt="Video tatuaje"></iframe>
+                    <video src="../assets/video/Tatuaje.mp4" alt="Video tattoo" controls class="img-fluid"></video>
                   </div>
                   <div class="card p-3 text-right galeria__card--color">
                     <blockquote class="blockquote mb-0">
