Agregue animacion en el footer

--- a/paginas/estudio.html
+++ b/paginas/estudio.html
@@ -68,7 +68,7 @@
             <div class="col-lg-4 col-xs-12">
                 <img src="../assets/img/imagenEstudio.jpg" alt="Foto del estudio" class="img-fluid informacion__imagen--boxYFlex" data-aos="zoom-out-up"/>
             </div>
-            <div class="col-lg-8 col-xs-12 textoEs informacion__texto--color informacion__texto--tipografia informacion__texto--boxYFlex">
+            <div class="col-lg-8 col-xs-12 textoEs informacion__texto--color informacion__texto--tipografia informacion__texto--boxYFlex"data-aos="zoom-out-up">
                 <P>Situados en el barrio de Recoleta, abrimos las puertas de nuestro estudio para ofrecer un ambiente en el que <strong> un tatuaje sea más que marcar algo en tu piel</strong><p> 
                 <p> Un trato familiar y muy cercano, nuestra principal intención es hacer sentir a todo el que entre como si estuviera en su casa. Siempre realizamos una visita previa con todos nuestros clientes, para poder escucharlos y entender lo que quieren llevar en su piel. <strong> Nuestros diseños son únicos y totalmente personalizados,</strong> dibujados especialmente para cada persona, entendiendo e intentando expresar lo que cada elemento significa.</p>
                 <p>Realizamos todo tipo de tatuajes adaptando cada estilo a las necesidades de cada persona, siendo nuestra pasión los mandalas, el puntillismo, los tatuajes geométricos, realistas, tatuajes ilustrados, con watercolor, tatuajes pequeños y los tatuajes de estilo tradicional.</p>
